--- a/index.html
+++ b/index.html
@@ -61,13 +61,25 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="./images/what_are_we_doing_1.jpg" alt="" width="370" />
+            <img
+              src="./images/what_are_we_doing_1.jpg"
+              alt="Зображення-набір коду"
+              width="370"
+            />
           </li>
           <li>
-            <img src="./images/what_are_we_doing_2.jpg" alt="" width="370" />
+            <img
+              src="./images/what_are_we_doing_2.jpg"
+              alt="Зображення- створення макету телефону"
+              width="370"
+            />
           </li>
           <li>
-            <img src="./images/what_are_we_doing_3.jpg" alt="" width="370" />
+            <img
+              src="./images/what_are_we_doing_3.jpg"
+              alt="Вибір кольорів на планшеті"
+              width="370"
+            />
           </li>
         </ul>
       </section>
@@ -80,7 +92,7 @@
               alt="Фото Ігора Дем'яненко"
               width="270"
             />
-            <p>Ігор Дем'яненко</p>
+            <h3>Ігор Дем'яненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
@@ -89,7 +101,7 @@
               alt="Фото Ольги Рєпіної"
               width="270"
             />
-            <p>Ольга Рєпіна</p>
+            <h3>Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
@@ -98,7 +110,7 @@
               alt="Фото Миколи Тарасова"
               width="270"
             />
-            <p>Микола Тарасов</p>
+            <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
@@ -107,7 +119,7 @@
               alt="Фото Михайла Єрмакова"
               width="270"
             />
-            <p>Михайло Єрмаков</p>
+            <h3>Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
@@ -116,9 +128,20 @@
     <footer>
       <a href="index.html" lang="en">WebStudio</a> <br />
       <adress>
-        м. Київ, пр-т Лесі Українки, 26 <br />
-        info@devstudio.com <br />
-        +38 096 111 11 11
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        </ul>
       </adress>
     </footer>
   </body>
