--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8" />
     <title>Студія</title>
   </head>
-  <heder>
-    <nav>
-      <a href="index.html" lang="en">WebStudio</a>
-      <ul>
-        <li><a href="">Студія</a></li>
-        <li><a href="">Портфоліо</a></li>
-        <li><a href="">Контакти</a></li>
-      </ul>
-    </nav>
-    <ul>
-      <li>
-        <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
-      </li>
-      <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
-    </ul>
-  </heder>
+
   <body>
+    <header>
+      <nav>
+        <a href="index.html" lang="en">WebStudio</a>
+        <ul>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+        </li>
+        <li><a href=""></a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
     <main>
       <h1>Ефективні рішення для вашого бізнесу</h1>
       <button type="button">Замовити послугу</button>
@@ -126,8 +128,8 @@
       </section>
     </main>
     <footer>
-      <a href="index.html" lang="en">WebStudio</a> <br />
-      <adress>
+      <a href="./index.html" lang="en">WebStudio</a> <br />
+      <address>
         <ul>
           <li>
             <a
@@ -140,9 +142,9 @@
           <li>
             <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-      </adress>
+      </address>
     </footer>
   </body>
 </html>
